tests/snapshots/lib__snapshots__report@big-regex.env_filter.snap
---
source: tests/snapshots.rs
assertion_line: 73
expression: "/(?:){4294967295}"
---

  ⚠ 1 directives were ignored as invalid

Error: tracing_filter::simple::Warning::InvalidRegex

  ⚠ invalid regex specified
   ╭────
 1 │ /(?:){4294967295}
   ·  ────────┬───────
   ·          ╰── Compiled regex exceeds size limit of 10485760 bytes.
   ╰────

